# thesis_code

./: README.md
CameraCppTest/: CMakeLists.txt  main.cpp  new_test.cpp  record_test.cpp  record_test_x.cpp  test_recording.cpp
SystemMonitor_Tool/: CMakeLists.txt  monitor.cpp
all_in_one_stabilizer/: CMakeLists.txt  graphics.ipynb
all_in_one_stabilizer/src/: MotionEstimator.cpp  MotionEstimator.h  Stabilizer.cpp  Stabilizer.h  Transform.cpp  Transform.h  main.cpp
